solved the text overflow issue in the notecard

--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,7 @@ code {
 
 textarea {
   border: none;
-  resize: none;
+ resize: none;
   background-color: #67d7cc;
 }
 
@@ -78,6 +78,7 @@ textarea:focus {
   flex-direction: column;
   justify-content: space-between;
   white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 .note-footer {
